2009-10-26  Ian Beckwith  <ianb@erislabs.net>

	* Fix debsec (Thanks to Moritz Muehlenhoff, for this
	  and all his other work).

2009-10-20  Ian Beckwith  <ianb@erislabs.net>

	* Move config files to follow XDG basedir spec
	  (http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html)
	  Global config files are searched for in:
	  + $SURFRAW_global_conf if set.
	  + $XDG_CONFIG_DIRS/surfraw/{conf,bookmarks}
	    ($XDG_CONFIG_DIRS is $PATH-style colon separated list)
	  + @sysconfdir@/xdg/surfraw/{conf,bookmarks}
	    (@sysconfdir@ is usually /etc or /usr/local/etc/)
	  + @sysconfdir@/surfraw.{conf,bookmarks}
	    (for backwards compatibility)
	  Local config files & elvi are searched for in:
	  + $SURFRAW_conf if set (for per-user conf file only)
	    (no longer set by default config files)
	  + $XDG_CONFIG_HOME/surfraw/{conf,bookmarks,elvi/}
	  + $HOME/.config/surfraw/{conf,bookmarks,elvi/}
	  + $HOME/.surfraw.{conf,bookmarks}
	    (for backwards compatibility).

2009-10-18  Ian Beckwith  <ianb@erislabs.net>

	* Apply patch from James Rowe:
	    Support per-user elvi in ~/.surfraw.d.
            Based on the idea by Sumant Oemrawsingh.

2009-08-28  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: genbugs (thanks to Nick White).
	* surfraw-bash-completion.IN: enable extglob so completion
	  works standalone (thanks to James Rowe).
	  See http://bugs.gentoo.org/show_bug.cgi?id=277891

2009-07-23  Ian Beckwith  <ianb@erislabs.net>

	* Fixed tests: excite, pgpkeys, javasun. ebay(my)

2009-07-21  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: debvcsbrowse.
	* err(): write to stderr instead of stdout.

2009-06-28  Ian Beckwith  <ianb@erislabs.net>

	* Bump version to 2.2.6.
	* Only use first matching bookmark (Thanks to Carl Fredrik Hammar).

2009-05-13  Ian Beckwith  <ianb@erislabs.net>

	* Replaced scaleplus with comlaw.
	* debpackages, debcontents: updated ubuntu release names.

2009-05-12  Ian Beckwith  <ianb@erislabs.net>
