@@ -4,17 +4,17 @@ EXTRA_DIST = runtests elviwithouttests README COOKIES W.test		\
 	cite.test cnn.test codesearch.test comlaw.test ctan.test	\
 	currency.test cve.test debbugs.test debcontents.test		\
 	deblists.test deblogs.test debpackages.test debpts.test		\
-	debsec.test debwiki.test deja.test discogs.test dmoz.test	\
-	ebay.test etym.test excite.test fast.test filesearching.test	\
-	foldoc.test freebsd.test freedb.test freshmeat.test		\
-	fsfdir.test genbugs.test genpkg.test genportage.test		\
-	google.test gutenberg.test happypenguin.test imdb.test		\
-	ixquick.test javasun.test lastfm.test leodict.test lsm.test	\
-	musicbrainz.test netbsd.test ntrs.test openbsd.test		\
-	opensearch.test piratebay.test port.test pgpkeys.test		\
-	pubmed.test rae.test rfc.test rhyme.test scholar.test		\
-	scicom.test scpan.test slashdot.test slinuxdoc.test		\
-	sourceforge.test springer.test stockquote.test			\
+	debsec.test debvcsbrowse.test debwiki.test deja.test		\
+	discogs.test dmoz.test ebay.test etym.test excite.test		\
+	fast.test filesearching.test foldoc.test freebsd.test		\
+	freedb.test freshmeat.test fsfdir.test genbugs.test		\
+	genpkg.test genportage.test google.test gutenberg.test		\
+	happypenguin.test imdb.test ixquick.test javasun.test		\
+	lastfm.test leodict.test lsm.test musicbrainz.test netbsd.test	\
+	ntrs.test openbsd.test opensearch.test piratebay.test		\
+	port.test pgpkeys.test pubmed.test rae.test rfc.test		\
+	rhyme.test scholar.test scicom.test scpan.test slashdot.test	\
+	slinuxdoc.test sourceforge.test springer.test stockquote.test	\
 	sunonesearch.test thesaurus.test translate.test urban.test	\
 	w3css.test w3html.test w3link.test w3rdf.test wayback.test	\
 	webster.test wetandwild.test wikipedia.test woffle.test		\
